# model-zoo-vision

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml  setup.py
.github/workflows/: code-style.yml
applications/: CMakeLists.txt  __init__.py
applications/emotion_detection/: README.md
applications/emotion_detection/config/: emotion_detection.yaml
applications/emotion_detection/cpp/: example_emotion.cpp  example_emotion.h
applications/emotion_detection/python/: example_emotion.py
applications/emotion_detection/scripts/: download_models.sh
applications/fall_detection/: README.md
applications/fall_detection/config/: fall_detection.yaml  stgcn_action.yaml
applications/fall_detection/cpp/: example_fall_detection.cpp  example_fall_detection.h
applications/fall_detection/python/: example_fall_detection.py
applications/fall_detection/scripts/: download_models.sh
applications/fire_detection/: README.md
applications/fire_detection/config/: fire_detection.yaml
applications/fire_detection/cpp/: example_fire_detection.cpp  example_fire_detection.h
applications/fire_detection/python/: example_fire_detection.py
applications/fire_detection/scripts/: download_models.sh
applications/intrusion_detection/: README.md
applications/intrusion_detection/config/: intrusion_detection.yaml
applications/intrusion_detection/cpp/: example_intrusion_identification.cpp  example_intrusion_identification.h
applications/intrusion_detection/python/: example_intrusion_identification.py
applications/intrusion_detection/scripts/: download_models.sh
assets/labels/: emotion.txt  gesture.txt
examples/: CMakeLists.txt
examples/arcface/: README.md
examples/arcface/config/: arcface.yaml
examples/arcface/cpp/: arcface.cpp
examples/bytetrack/: README.md
examples/emotion/: README.md
examples/ocsort/: README.md
examples/ocsort/cpp/: ocsort.cpp
examples/resnet/: README.md
examples/yolov11/: README.md
examples/yolov5/: README.md
examples/yolov5-face/: README.md
examples/yolov5_gesture/: README.md
examples/yolov8/: README.md
examples/yolov8_pose/: README.md
examples/yolov8_seg/: README.md
include/: vision_service.h
scripts/: download_all_models.sh  download_assets.sh
src/: CMakeLists.txt  __init__.py  vision_service.cpp
src/common/: __init__.py
src/common/cpp/: common.h  datatype.h  drawing.cpp  drawing.h  embedding_utils.cpp  embedding_utils.h  image_processing.cpp  image_processing.h  nms.cpp  nms.h  yolo_utils.cpp  yolo_utils.h
src/common/python/: __init__.py  activations.py  config_loader.py  coordinate_utils.py  drawing.py  image_processing.py  nms.py  yolo_utils.py
src/core/: __init__.py
src/core/cpp/: vision_model_base.cpp  vision_model_base.h  vision_model_config.h  vision_model_factory.cpp  vision_model_factory.h  vision_task_interfaces.h
src/core/python/: __init__.py  vision_model_base.py  vision_model_exceptions.py  vision_model_factory.py  vision_service_native.py
src/deploy/arcface/: __init__.py
src/deploy/arcface/cpp/: arcface_recognizer.cpp  arcface_recognizer.h
src/deploy/arcface/python/: __init__.py  arcface_face_recognizer.py
src/deploy/bytetrack/: __init__.py
src/deploy/bytetrack/cpp/: byte_track_tracker.cpp  byte_track_tracker.h
src/deploy/bytetrack/cpp/include/: BYTETracker.h  STrack.h  bytetrack_datatype.h  kalmanFilter.h  lapjv.h
src/deploy/bytetrack/cpp/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
src/deploy/bytetrack/python/: __init__.py  bytetrack_tracker.py
src/deploy/bytetrack/python/tracking/: __init__.py  basetrack.py  byte_tracker.py  bytetrack.py  kalman_filter.py  matching.py
src/deploy/emotion/: __init__.py
src/deploy/emotion/cpp/: emotion_recognizer.cpp  emotion_recognizer.h
src/deploy/emotion/python/: __init__.py  emotion_recognizer.py
src/deploy/ocsort/: __init__.py
src/deploy/ocsort/cpp/: ocsort_tracker.cpp  ocsort_tracker.h
src/deploy/ocsort/cpp/include/: Association.hpp  KalmanBoxTracker.hpp  KalmanFilter.hpp  OCSort.hpp  Utilities.hpp  lapjv.hpp
src/deploy/ocsort/cpp/src/: Association.cpp  KalmanBoxTracker.cpp  KalmanFilter.cpp  OCSort.cpp  Utilities.cpp  lapjv.cpp
src/deploy/ocsort/python/: __init__.py  ocsort_tracker.py
src/deploy/ocsort/python/tracking/: __init__.py  association.py  kalmanfilter.py  ocsort.py
src/deploy/pp_liteseg/: __init__.py
src/deploy/pp_liteseg/cpp/: pp_liteseg.cpp  pp_liteseg.h
src/deploy/pp_liteseg/python/: __init__.py  pp_liteseg.py
src/deploy/resnet/: __init__.py
src/deploy/resnet/cpp/: resnet_classifier.cpp  resnet_classifier.h
src/deploy/resnet/python/: __init__.py  resnet_classifier.py
src/deploy/stgcn/: __init__.py
src/deploy/stgcn/cpp/: stgcn_action_recognizer.cpp  stgcn_action_recognizer.h
src/deploy/stgcn/python/: __init__.py  stgcn_action_recognizer.py
src/deploy/yolov11/: __init__.py
src/deploy/yolov11/python/: __init__.py  yolov11_detector.py
src/deploy/yolov5/: __init__.py
src/deploy/yolov5/cpp/: yolov5_detector.cpp  yolov5_detector.h
src/deploy/yolov5/python/: __init__.py  yolov5_detector.py
src/deploy/yolov5_face/: __init__.py
src/deploy/yolov5_face/cpp/: yolov5_face_detector.cpp  yolov5_face_detector.h
src/deploy/yolov5_face/python/: __init__.py  yolov5_face_detector.py
src/deploy/yolov5_gesture/: __init__.py
src/deploy/yolov5_gesture/cpp/: yolov5_gesture_detector.cpp  yolov5_gesture_detector.h
src/deploy/yolov5_gesture/python/: __init__.py  yolov5_gesture_detector.py
src/deploy/yolov8/: __init__.py
src/deploy/yolov8/cpp/: yolov8_detector.cpp  yolov8_detector.h
src/deploy/yolov8/python/: __init__.py  yolov8_detector.py
src/deploy/yolov8_pose/: __init__.py
src/deploy/yolov8_pose/cpp/: yolov8_pose_detector.cpp  yolov8_pose_detector.h
src/deploy/yolov8_pose/python/: __init__.py  yolov8_pose_detector.py
src/deploy/yolov8_seg/: __init__.py
src/deploy/yolov8_seg/cpp/: yolov8_seg_detector.cpp  yolov8_seg_detector.h
src/deploy/yolov8_seg/python/: __init__.py  yolov8_seg_detector.py
tests/benchmarks/: CMakeLists.txt  infer_benchmark.cpp
(+47 files in other folders)
